# mcp-agent-attestation

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  PROPOSAL.md  README.md  SPEC.md  pyproject.toml
benchmarks/: benchmark.py
demo/: Dockerfile.client  Dockerfile.server  README.md  client.py  docker-compose.yml  server.py
docs/: API.md  FELLOWSHIP_NARRATIVE.md  SECURITY_AUDIT.md  THREAT_ANALYSIS.md
src/: __init__.py
src/attestation/: __init__.py  __main__.py  attacks.py  cache.py  cli.py  core.py  jwks.py  mcp_client.py  mcp_server.py  observability.py  protocol.py
tests/: __init__.py  test_attestation.py  test_cache.py  test_cli.py  test_hardening.py  test_integration.py  test_jwks.py  test_mcp_client.py  test_mcp_server.py  test_observability.py  test_real_mcp_integration.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/cli/: index.ts
typescript/src/: attacks.ts  core.ts  index.ts  keys.ts  mcpIntegration.ts  replayCache.ts  types.ts
typescript/tests/: attacks.test.ts  core.test.ts  integration.test.ts
